@@ -46,7 +46,7 @@
       </div>
 <!-- -->
       <div class="ui column">
-        <div class="ui inverted segment">
+        <div class="ui inverted very padded segment">
           <code>&gt; Pointing Menu:</code>
           <br />
           <code>&gt; [Home](#root "active")</code>
@@ -94,7 +94,7 @@
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment">
+      <div class="ui inverted very padded segment">
         <code>
 __Button|Follow__
 </code>
@@ -115,7 +115,7 @@ __Button|Follow__
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment"><code>__Follow-Button Button|Follow__</code><br />or<br /><code>__Button|Follow|Follow-Button__</code></div>
+      <div class="ui inverted very padded segment"><code>__Follow-Button Button|Follow__</code><br />or<br /><code>__Button|Follow|Follow-Button__</code></div>
     </div>
 <!-- -->
   </div>
@@ -132,7 +132,7 @@ __Button|Follow__
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment">
+      <div class="ui inverted very padded segment">
         <code>
 __Focusable Button|Follow__
 </code>
@@ -162,7 +162,7 @@ __Focusable Button|Follow__
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment">
+      <div class="ui inverted very padded segment">
         <code>
 __Button|Save|Primary__
 __Button|Discard__
@@ -196,7 +196,7 @@ __Button|Discard__
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment">
+      <div class="ui inverted very padded segment">
         <code>
 __Animated Button|Text:Next;Icon:Right Arrow__
 </code>
@@ -222,7 +222,7 @@ __Animated Button|Text:Next;Icon:Right Arrow__
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment">
+      <div class="ui inverted very padded segment">
         <code>
 __Vertical Animated Button|Icon:Shop;Text:Shop__
 </code>
@@ -246,7 +246,7 @@ __Vertical Animated Button|Icon:Shop;Text:Shop__
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment"><code>__Fade Animated Button|Text:Sign-up for a Pro account;Text:$12.99 a month__</code><br /> or <br />
+      <div class="ui inverted very padded segment"><code>__Fade Animated Button|Text:Sign-up for a Pro account;Text:$12.99 a month__</code><br /> or <br />
 <code>__Fade Animated Button|Sign-up for a Pro account;$12.99 a month__</code></div>
     </div>
 <!-- -->
@@ -271,7 +271,7 @@ __Vertical Animated Button|Icon:Shop;Text:Shop__
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment">
+      <div class="ui inverted very padded segment">
         <code>
 __Icon Button|Icon:Cloud__
 </code>
@@ -297,7 +297,7 @@ __Icon Button|Icon:Cloud__
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment">
+      <div class="ui inverted very padded segment">
         <code>
 __Labeled Icon Button|Icon:Pause,Text:Pause__
 </code>
@@ -323,7 +323,7 @@ __Labeled Icon Button|Icon:Pause,Text:Pause__
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment">
+      <div class="ui inverted very padded segment">
         <code>
 __Basic Button|Icon:User,Text:Add Friend__
 </code>
@@ -352,7 +352,7 @@ __Basic Button|Icon:User,Text:Add Friend__
 <!-- -->
     <div class="ui left aligned ten wide column">
       <h5 class="ui header">Markdown Syntax</h5>
-      <div class="ui inverted segment">
+      <div class="ui inverted very padded segment">
         <code>
 __Button|Text:Black|Basic Black__
 __Button|Text:Yellow|Basic Yellow__
@@ -364,6 +364,220 @@ __Button|Text:Pink|Basic Pink__
 __Button|Text:Red|Basic Red__
 __Button|Text:Teal|Basic Teal__
 </code>
+      </div>
+    </div>
+<!-- -->
+  </div>
+<!-- -->
+  <div class="ui attached segment">
+    <h3 class="ui header">Inverted</h3>
+    <p>A button can be formatted to appear on dark backgrounds</p>
+  </div>
+<!-- -->
+  <div class="ui divided segment grid">
+    <div class="ui html top attached segment">
+      <div class="ui top attached label">Inverted</div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <div class="ui inverted very padded segment">
+        <div class="ui inverted button">Standard</div>
+        <div class="ui inverted black button">Black</div>
+        <div class="ui inverted yellow button">Yellow</div>
+        <div class="ui inverted green button">Green</div>
+        <div class="ui inverted blue button">Blue</div>
+        <div class="ui inverted orange button">Orange</div>
+        <div class="ui inverted purple button">Purple</div>
+        <div class="ui inverted pink button">Pink</div>
+        <div class="ui inverted red button">Red</div>
+        <div class="ui inverted teal button">Teal</div>
+      </div>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>&gt; Inverted Segment:</code>
+        <br />
+        <code>&gt; __Button|Text:Standard|Inverted__</code>
+        <br />
+        <code>&gt; __Button|Text:Black|Inverted Black__</code>
+        <br />
+        <code>&gt; __Button|Text:Yellow|Inverted Yellow__</code>
+        <br />
+        <code>&gt; __Button|Text:Green|Inverted Green__</code>
+        <br />
+        <code>&gt; __Button|Text:Blue|Inverted Blue__</code>
+        <br />
+        <code>&gt; __Button|Text:Orange|Inverted Orange__</code>
+        <br />
+        <code>&gt; __Button|Text:Purple|Inverted Purple__</code>
+        <br />
+        <code>&gt; __Button|Text:Pink|Inverted Pink__</code>
+        <br />
+        <code>&gt; __Button|Text:Red|Inverted Red__</code>
+        <br />
+        <code>&gt; __Button|Text:Teal|Inverted Teal__</code>
+      </div>
+    </div>
+<!-- -->
+  </div>
+<!-- -->
+  <div class="ui attached segment">
+    <h3 class="ui header">Groups</h3>
+    <p>Buttons can exist together as a group</p>
+  </div>
+<!-- -->
+  <div class="ui divided segment grid">
+    <div class="ui html top attached segment">
+      <div class="ui top attached label">Buttons</div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <div class="ui buttons">
+        <div class="ui standard button">One</div>
+        <div class="ui standard button">Two</div>
+        <div class="ui standard button">Three</div>
+      </div>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>&gt; Buttons:</code>
+        <br />
+        <code>&gt; __Button|Text:One|Standard__</code>
+        <br />
+        <code>&gt; __Button|Text:Two|Standard__</code>
+        <br />
+        <code>&gt; __Button|Text:Three|Standard__</code>
+      </div>
+    </div>
+<!-- -->
+  </div>
+<!-- -->
+  <div class="ui attached segment">
+    <h3 class="ui header">Icon Buttons</h3>
+    <p>Buttons can exist together as a group</p>
+  </div>
+<!-- -->
+  <div class="ui divided segment grid">
+    <div class="ui html top attached segment">
+      <div class="ui top attached label">Buttons</div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <div class="ui icon buttons">
+        <div class="ui button">
+          <i class="align left icon"></i>
+        </div>
+        <div class="ui button">
+          <i class="align center icon"></i>
+        </div>
+        <div class="ui button">
+          <i class="align right icon"></i>
+        </div>
+        <div class="ui button">
+          <i class="align justify icon"></i>
+        </div>
+      </div>
+<!-- -->
+      <div class="ui icon buttons">
+        <div class="ui button">
+          <i class="bold icon"></i>
+        </div>
+        <div class="ui button">
+          <i class="underline icon"></i>
+        </div>
+        <div class="ui button">
+          <i class="text width icon"></i>
+        </div>
+      </div>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>&gt; Icon Buttons:</code>
+        <br />
+        <code>&gt; __Button|Icon:Align Left__</code>
+        <br />
+        <code>&gt; __Button|Icon:Align Center__</code>
+        <br />
+        <code>&gt; __Button|Icon:Align Right__</code>
+        <br />
+        <code>&gt; __Button|Icon:Align Justify__</code>
+        <br />
+        <br />
+        <code>&lt;!-- A separator is required in between two spaces --&gt;</code>
+        <br />
+        <br />
+        <code>&gt; Icon Buttons:</code>
+        <br />
+        <code>&gt; __Button|Icon:Bold__</code>
+        <br />
+        <code>&gt; __Button|Icon:Underline__</code>
+        <br />
+        <code>&gt; __Button|Icon:Text Width__</code>
+      </div>
+    </div>
+<!-- -->
+  </div>
+<!-- -->
+  <div class="ui attached segment">
+    <h3 class="ui header">Conditionals</h3>
+    <p>Button groups can contain conditionals</p>
+  </div>
+<!-- -->
+  <div class="ui divided segment grid">
+    <div class="ui html top attached segment">
+      <div class="ui top attached label">Conditionals</div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <div class="ui icon buttons">
+        <div class="ui button">Cancel</div>
+        <div class="or"></div>
+        <div class="ui positive button">Save</div>
+      </div>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>&gt; Icon Buttons:</code>
+        <br />
+        <code>&gt; __Button|Text:Cancel__</code>
+        <br />
+        <code>&gt; __Div Tag||Or__</code>
+        <br />
+        <code>&gt; __Button|Text:Save|Positive__</code>
+      </div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <div class="ui icon buttons">
+        <div class="ui button">un</div>
+        <div class="or" data-text="ou"></div>
+        <div class="ui positive button">deux</div>
+      </div>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>&gt; Icon Buttons:</code>
+        <br />
+        <code>&gt; __Button|Text:un__</code>
+        <br />
+        <code>&gt; __Div Tag|Or|Data:Text:ou__</code>
+        <br />
+        <code>&gt; __Button|Text:deux|Positive__</code>
       </div>
     </div>
 <!-- -->
