@@ -31,7 +31,7 @@
 > > > <!-- -->
 > > >
 > > > > Column:
-> > > > > Inverted Segment:
+> > > > > Inverted Very Padded Segment:
 > > > > > ```> Pointing Menu：``` <br />
 > > > > > ```> [Home](#root "active")``` <br />
 > > > > > ```> [Messages](#messages)``` <br />
@@ -40,6 +40,8 @@
 > > > > > ```> > [Logout](#logout)``` <br />
 > > > > > <br />
 > > > > > ```__Button|Add Friend__```
+
+
 >
 > <!-- -->
 >
@@ -48,11 +50,15 @@
 > > ```gem install markdown-ui```
 > > ##Usage
 > > ```markdown-ui index.md > index.html```
+
+
 >
 > <!-- -->
 >
 > > Segment:
 > > # Buttons:Center Aligned
+
+
 >
 > <!-- -->
 >
@@ -77,7 +83,7 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```
 > > > > __Button|Follow__
 > > > > ```
@@ -102,7 +108,7 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```__Follow-Button Button|Follow__```
 > > > > <br />or<br />
 > > > > ```__Button|Follow|Follow-Button__```
@@ -127,13 +133,15 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```
 > > > > __Focusable Button|Follow__
 > > > > ```
 > >
 > > <!-- -->
 > >
+
+
 >
 > <!-- -->
 >
@@ -160,7 +168,7 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```
 > > > > __Button|Save|Primary__
 > > > > __Button|Discard__
@@ -170,6 +178,8 @@
 > >
 > > <!-- -->
 > >
+
+
 >
 > <!-- -->
 >
@@ -194,7 +204,7 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```
 > > > > __Animated Button|Text：Next;Icon：Right Arrow__
 > > > > ```
@@ -219,7 +229,7 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```
 > > > > __Vertical Animated Button|Icon：Shop;Text：Shop__
 > > > > ```
@@ -244,13 +254,15 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```__Fade Animated Button|Text：Sign-up for a Pro account;Text：$12.99 a month__```
 > > > > <br /> or <br />
 > > > > ```__Fade Animated Button|Sign-up for a Pro account;$12.99 a month__```
 > >
 > > <!-- -->
 > >
+
+
 >
 > <!-- -->
 >
@@ -275,13 +287,15 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```
 > > > > __Icon Button|Icon：Cloud__
 > > > > ```
 > >
 > > <!-- -->
 > >
+
+
 >
 > <!-- -->
 >
@@ -306,13 +320,15 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```
 > > > > __Labeled Icon Button|Icon：Pause,Text：Pause__
 > > > > ```
 > >
 > > <!-- -->
 > >
+
+
 >
 > <!-- -->
 >
@@ -337,7 +353,7 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```
 > > > > __Basic Button|Icon：User,Text：Add Friend__
 > > > > ```
@@ -370,7 +386,7 @@
 > >
 > > > Left Aligned Ten Wide Column:
 > > > ##### Markdown Syntax
-> > > > Inverted Segment:
+> > > > Inverted Very Padded Segment:
 > > > > ```
 > > > > __Button|Text：Black|Basic Black__
 > > > > __Button|Text：Yellow|Basic Yellow__
@@ -382,6 +398,203 @@
 > > > > __Button|Text：Red|Basic Red__
 > > > > __Button|Text：Teal|Basic Teal__
 > > > ```
+> >
+> > <!-- -->
+> >
+
+
+>
+> <!-- -->
+>
+> > Attached Segment:
+> > ### Inverted
+> > "A button can be formatted to appear on dark backgrounds"
+>
+> <!-- -->
+>
+> > Divided Segment Grid:
+> > > HTML Top Attached Segment:
+> > > > Top Attached Label:
+> > > > Inverted
+> >
+> > <!-- -->
+> >
+> > > Center Aligned Six Wide Column:
+> > > ##### Preview
+> > > > Inverted Very Padded Segment:
+> > > > __Button|Text: Standard|Inverted__
+> > > > __Button|Text: Black|Inverted Black__
+> > > > __Button|Text: Yellow|Inverted Yellow__
+> > > > __Button|Text: Green|Inverted Green__
+> > > > __Button|Text: Blue|Inverted Blue__
+> > > > __Button|Text: Orange|Inverted Orange__
+> > > > __Button|Text: Purple|Inverted Purple__
+> > > > __Button|Text: Pink|Inverted Pink__
+> > > > __Button|Text: Red|Inverted Red__
+> > > > __Button|Text: Teal|Inverted Teal__
+> >
+> > <!-- -->
+> >
+> > > Left Aligned Ten Wide Column:
+> > > ##### Markdown Syntax
+> > > > Inverted Very Padded Segment:
+> > > > ```> Inverted Segment：``` <br />
+> > > > ```> __Button|Text：Standard|Inverted__``` <br />
+> > > > ```> __Button|Text：Black|Inverted Black__``` <br />
+> > > > ```> __Button|Text：Yellow|Inverted Yellow__``` <br />
+> > > > ```> __Button|Text：Green|Inverted Green__``` <br />
+> > > > ```> __Button|Text：Blue|Inverted Blue__``` <br />
+> > > > ```> __Button|Text：Orange|Inverted Orange__``` <br />
+> > > > ```> __Button|Text：Purple|Inverted Purple__``` <br />
+> > > > ```> __Button|Text：Pink|Inverted Pink__``` <br />
+> > > > ```> __Button|Text：Red|Inverted Red__``` <br />
+> > > > ```> __Button|Text：Teal|Inverted Teal__```
+> >
+> > <!-- -->
+> >
+
+
+>
+> <!-- -->
+>
+> > Attached Segment:
+> > ### Groups
+> > "Buttons can exist together as a group"
+>
+> <!-- -->
+>
+> > Divided Segment Grid:
+> > > HTML Top Attached Segment:
+> > > > Top Attached Label:
+> > > > Buttons
+> >
+> > <!-- -->
+> >
+> > > Center Aligned Six Wide Column:
+> > > ##### Preview
+> > > > Buttons:
+> > > > __Button|Text: One|Standard__
+> > > > __Button|Text: Two|Standard__
+> > > > __Button|Text: Three|Standard__
+> >
+> > <!-- -->
+> >
+> > > Left Aligned Ten Wide Column:
+> > > ##### Markdown Syntax
+> > > > Inverted Very Padded Segment:
+> > > > ```> Buttons：``` <br />
+> > > > ```> __Button|Text：One|Standard__``` <br />
+> > > > ```> __Button|Text：Two|Standard__``` <br />
+> > > > ```> __Button|Text：Three|Standard__```
+> >
+> > <!-- -->
+> >
+
+
+>
+> <!-- -->
+>
+> > Attached Segment:
+> > ### Icon Buttons
+> > "Buttons can exist together as a group"
+>
+> <!-- -->
+>
+> > Divided Segment Grid:
+> > > HTML Top Attached Segment:
+> > > > Top Attached Label:
+> > > > Buttons
+> >
+> > <!-- -->
+> >
+> > > Center Aligned Six Wide Column:
+> > > ##### Preview
+> > > > Icon Buttons:
+> > > > __Button|Icon: Align Left__
+> > > > __Button|Icon: Align Center__
+> > > > __Button|Icon: Align Right__
+> > > > __Button|Icon: Align Justify__
+> > >
+> > > <!-- -->
+> > >
+> > > > Icon Buttons:
+> > > > __Button|Icon: Bold__
+> > > > __Button|Icon: Underline__
+> > > > __Button|Icon: Text Width__
+> >
+> > <!-- -->
+> >
+> > > Left Aligned Ten Wide Column:
+> > > ##### Markdown Syntax
+> > > > Inverted Very Padded Segment:
+> > > > ```> Icon Buttons：``` <br />
+> > > > ```> __Button|Icon：Align Left__``` <br />
+> > > > ```> __Button|Icon：Align Center__``` <br />
+> > > > ```> __Button|Icon：Align Right__``` <br />
+> > > > ```> __Button|Icon：Align Justify__``` <br />
+> > > <br />
+> > > ```  <!-- A separator is required in between two spaces -->``` <br />
+> > > <br />
+> > > > ```> Icon Buttons：``` <br />
+> > > > ```> __Button|Icon：Bold__``` <br />
+> > > > ```> __Button|Icon：Underline__``` <br />
+> > > > ```> __Button|Icon：Text Width__```
+> >
+> > <!-- -->
+> >
+
+
+>
+> <!-- -->
+>
+> > Attached Segment:
+> > ### Conditionals
+> > "Button groups can contain conditionals"
+>
+> <!-- -->
+>
+> > Divided Segment Grid:
+> > > HTML Top Attached Segment:
+> > > > Top Attached Label:
+> > > > Conditionals
+> >
+> > <!-- -->
+> >
+> > > Center Aligned Six Wide Column:
+> > > ##### Preview
+> > > > Icon Buttons:
+> > > > __Button|Text: Cancel__
+> > > > __Div Tag||Or__
+> > > > __Button|Text: Save|Positive__
+> >
+> > <!-- -->
+> >
+> > > Left Aligned Ten Wide Column:
+> > > ##### Markdown Syntax
+> > > > Inverted Very Padded Segment:
+> > > > ```> Icon Buttons：``` <br />
+> > > > ```> __Button|Text：Cancel__``` <br />
+> > > > ```> __Div Tag||Or__``` <br />
+> > > > ```> __Button|Text：Save|Positive__```
+> >
+> > <!-- -->
+> >
+> > > Center Aligned Six Wide Column:
+> > > ##### Preview
+> > > > Icon Buttons:
+> > > > __Button|Text: un__
+> > > > __Div Tag||Or|Data:Text:ou__
+> > > > __Button|Text: deux|Positive__
+> >
+> > <!-- -->
+> >
+> > > Left Aligned Ten Wide Column:
+> > > ##### Markdown Syntax
+> > > > Inverted Very Padded Segment:
+> > > > ```> Icon Buttons：``` <br />
+> > > > ```> __Button|Text：un__``` <br />
+> > > > ```> __Div Tag|Or|Data：Text：ou__``` <br />
+> > > > ```> __Button|Text：deux|Positive__```
 > >
 > > <!-- -->
 > >
